@@ -1,3 +1,8 @@
+2024-04-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
+	add r-ci-setup actions
+
 2024-01-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/xtsMod.cpp (RCPP_MODULE): Correct docstring
